[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-video-archiver"
version = "1.0.0"
description = "Batch download, rename, and optionally upload social media videos from any platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "prestigepromedia1" },
]
keywords = ["video", "archiver", "tiktok", "instagram", "youtube", "social-media", "yt-dlp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "yt-dlp",
]

[project.optional-dependencies]
drive = [
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
]

[project.scripts]
social-video-archiver = "social_video_archiver:main"

[project.urls]
Homepage = "https://github.com/prestigepromedia1/social-video-archiver"
